--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -22,6 +22,7 @@ $layout-side-header-bg-color:           darken($dark-gray, 5%);
 $layout-side-header-color:              lighten($dark-gray, 20%);
 
 $highlight-color:                       #fff;
+$hover-bg-color:                        lighten($base-accent-color, 20%);
 
 $base-button-color:                     $light-gray;
 $base-button-border-color:              $gray;
