--- a/app/sass/components/modules/content-filter-list-headers.scss
+++ b/app/sass/components/modules/content-filter-list-headers.scss
@@ -49,6 +49,10 @@
         }
     }
 
+    &.selectable:hover {
+        background: $hover-bg-color;
+    }
+
     > div > button span,
     > div .select > button span {
         line-height: 1 + $filter-button-padding;
