--- a/app/sass/components/modules/content-list.scss
+++ b/app/sass/components/modules/content-list.scss
@@ -23,7 +23,7 @@
         color: $section-header-color;
         margin-top: $content-list-item-spacing;
 
-        &:hover {
+        &.selectable:hover {
             background: $hover-bg-color;
             color: $highlight-color;
 
@@ -63,9 +63,9 @@
     }
 
     > li.cl > div.active,
-    > li.cl > div:hover,
+    > li.cl > div.selectable:hover,
     > li.cl > ul li.cl > div.active,
-    > li.cl > ul li.cl > div:hover {
+    > li.cl > ul li.cl > div.selectable:hover {
         > div.title > .radial-progress {
             .circle .mask .fill {
                 background: $highlight-color;
@@ -95,7 +95,7 @@
                 }
             }
 
-            &:hover {
+            &.selectable:hover {
                 background: $hover-bg-color;
 
                 > div.comments {
@@ -260,9 +260,12 @@
                         padding-top: $content-list-item-3-spacing;
                         margin-top: $content-list-item-spacing / 2;
 
-                        &.active,
-                        &:hover {
+                        &.active {
                             background: $base-accent-color;
+                        }
+
+                        &.selectable:hover {
+                            background: $hover-bg-color;
                         }
 
                         > div > button,
